fixed horizontal scrollbar on mobile devices

--- a/MiYou.Web/src/app/components/home/home.component.scss
+++ b/MiYou.Web/src/app/components/home/home.component.scss
@@ -11,7 +11,7 @@
     .left {
         align-items: center;
         flex-direction: column;
-        padding: 2rem;
+        // padding: 2rem;
         text-align: left;
         gap: 1.5rem;
 
@@ -48,10 +48,12 @@
     .right {
         align-items: center;
         justify-content: center;
+        // width: 100%;
 
         video {
             height: auto;
             max-height: 100%;
+            max-width: 100%;
         }
     }
 
@@ -74,7 +76,7 @@
   .right {
     width: 100%;
     justify-content: center;
-    padding: 1rem;
+    // padding: 1rem;
   }
 
   .right video {
